# git2-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  build.rs  generate_pub_use_test.sh  triagebot.toml
.github/workflows/: main.yml  publish.yml
ci/: azure-install-rust.yml  azure-test-all.yml  publish.sh
examples/: add.rs  blame.rs  cat-file.rs  clone.rs  commit.rs  diff.rs  fetch.rs  file-latest-commit.rs  init.rs  log.rs  ls-remote.rs  odb_backend_sqlite.rs  pull.rs  rev-list.rs  rev-parse.rs  status.rs  tag.rs
git2-curl/: CHANGELOG.md  Cargo.toml
git2-curl/src/: lib.rs
git2-curl/tests/: all.rs
git2-hyper/: Cargo.toml
git2-hyper/src/: lib.rs
git2-hyper/tests/: all.rs
git2-rustls/: Cargo.toml
git2-rustls/examples/: clone.rs
git2-rustls/src/: lib.rs
git2-ureq/: Cargo.toml
git2-ureq/src/: lib.rs
libgit2/: Cargo.toml
libgit2-sys/: CHANGELOG.md  Cargo.toml  build.rs  lib.rs
libgit2-sys/cmake/: FindLIBSSH2.cmake
libgit2-sys/src/: lib.rs
libgit2/src/: lib.rs
src/: apply.rs  attr.rs  blame.rs  blob.rs  branch.rs  buf.rs  build.rs  call.rs  cert.rs  cherrypick.rs  commit.rs  config.rs  cred.rs  describe.rs  diff.rs  email.rs  error.rs  filter.rs  hash.rs  index.rs  indexer.rs  lib.rs  mailmap.rs  mempack.rs  merge.rs  message.rs  note.rs  object.rs  odb.rs  odb_backend.rs  oid.rs  oid_array.rs  opts.rs  packbuilder.rs  panic.rs  patch.rs  pathspec.rs  proxy_options.rs  push.rs  push_update.rs  (+31 more)
systest/: Cargo.toml  build.rs
systest/include/: git2-systest-win32.h
systest/src/: main.rs
tests/: add_extensions.rs  compile_fail.rs  end_to_end.rs  get_extensions.rs  global_state.rs  remove_extensions.rs
tests/compile_fail/: remote_refspec.rs  remote_refspec.stderr
