[package]

name = "git2"
version = "0.8.0"
authors = ["Josh Triplett <josh@joshtriplett.org>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["git"]
repository = "https://github.com/rust-lang/git2-rs"
documentation = "https://docs.rs/git2"
description = """
Bindings to libgit2 for interoperating with git repositories. This library is
both threadsafe and memory safe and allows both reading and writing git
repositories.
"""
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "rust-lang/git2-rs" }

[dependencies]
url = "1.0"
bitflags = "1.0"
libc = "0.2"
log = "0.4"
libgit2-sys = { path = "libgit2-sys", version = "0.7.11" }

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]
openssl-sys = { version = "0.9.0", optional = true }
openssl-probe = { version = "0.1", optional = true }

[dev-dependencies]
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.39"
tempdir = "0.3.7"
thread-id = "3.3.0" # remove when we work with minimal-versions without it

[features]
unstable = []
default = ["ssh", "https", "curl", "ssh_key_from_memory"]
ssh = ["libgit2-sys/ssh"]
https = ["libgit2-sys/https", "openssl-sys", "openssl-probe"]
curl = ["libgit2-sys/curl"]
vendored-openssl = ["openssl-sys/vendored"]
ssh_key_from_memory = ["libgit2-sys/ssh_key_from_memory"]

[workspace]
members = ["systest", "git2-curl"]
