[package]
name = "git2"
version = "0.20.2"
authors = ["Josh Triplett <josh@joshtriplett.org>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["git"]
repository = "https://github.com/rust-lang/git2-rs"
documentation = "https://docs.rs/git2"
description = """
Bindings to libgit2 for interoperating with git repositories. This library is
both threadsafe and memory safe and allows both reading and writing git
repositories.
"""
categories = ["api-bindings"]
edition = "2018"

[dependencies]
url = "2.5.4"
bitflags = "2.1.0"
libc = "0.2"
log = "0.4.8"
libgit2-sys = { path = "libgit2-sys", version = "0.18.1" }

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]
openssl-sys = { version = "0.9.45", optional = true }
openssl-probe = { version = "0.1", optional = true }

[dev-dependencies]
clap = { version = "4.4.13", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting"] }
tempfile = "3.1.0"

[features]
unstable = []
default = ["ssh", "https"]
ssh = ["libgit2-sys/ssh"]
https = ["libgit2-sys/https", "openssl-sys", "openssl-probe"]
vendored-libgit2 = ["libgit2-sys/vendored"]
vendored-openssl = ["openssl-sys/vendored", "libgit2-sys/vendored-openssl"]
zlib-ng-compat = ["libgit2-sys/zlib-ng-compat"]

[workspace]
members = ["systest", "git2-curl"]
