[package]

name = "git2-curl"
version = "0.9.0"
authors = ["Josh Triplett <josh@joshtriplett.org>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/git2-rs"
documentation = "https://docs.rs/git2-curl"
description = """
Backend for an HTTP transport in libgit2 powered by libcurl.

Intended to be used with the git2 crate.
"""

[dependencies]
curl = "0.4"
url = "1.0"
log = "0.4"
git2 = { path = "..", version = "0.8", default-features = false }

[dev-dependencies]
civet = "0.11"
conduit = "0.8"
conduit-git-http-backend = "0.8"
tempfile = "3.0"

[[test]]
name = "all"
harness = false
