[package]
name = "git2-curl"
version = "0.22.0"
authors = ["Josh Triplett <josh@joshtriplett.org>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/git2-rs"
documentation = "https://docs.rs/git2-curl"
description = """
Backend for an HTTP transport in libgit2 powered by libcurl.

Intended to be used with the git2 crate.
"""
edition = "2021"

[dependencies]
curl = "0.4.33"
url = "2.5.4"
log = "0.4"
git2 = { path = "..", version = "0.21", default-features = false }

[dev-dependencies]
tempfile = "3.0"

[features]
zlib-ng-compat = ["git2/zlib-ng-compat", "curl/zlib-ng-compat"]

[[test]]
name = "all"
harness = false
